2008-10-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * ko.po, LINGUAS, src/about.c, THANKS:
   Added Korean translation. Thanks to netkiss for translation.


2008-10-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.h, src/plugindata.h, src/plugins.c, src/ui_utils.c,
   doc/Doxyfile.in, doc/pluginsymbols.c, plugins/demoplugin.c,
   plugins/pluginmacros.h:
 - API changes:
   Replace p_ui->get_toolbar_insert_position() with
   p_plugin->add_toolbar_item(), which also adds a separator when the
   first item is added.
   Add 'GeanyPlugin *geany_plugin' plugin symbol, partly to replace
   plugin_info (now deprecated), mainly to identify a plugin and hold
   private implementation fields for plugin utility functions.
   (plugin_info will be removed after the 0.15 release.)
 - Code changes:
   Add ui_auto_separator_add_ref() to hide separator-like widgets when
   their visible group elements are hidden or destroyed.
 * tagmanager/css.c:
   Fix gcc warning, wrap line.
 * src/plugins.c:
   Tidy up plugin cleanup code.
 * src/plugins.c:
   Use geany_debug() instead of g_warning() when a plugin has
   unresolved symbols.
 * src/dialogs.c:
   Refactor dialogs_show_unsaved_file() with run_unsaved_dialog().


2008-10-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/highlighting.c:
   Fix regression: clear all styles for filetype None to not break
   the 'invert_all' option.
 * src/saveactions.c:
   InstantSave: when opening new files from template, use the template's
   filetype, otherwise fall back to configured default filetype.
 * THANKS, src/about.c, src/symbols.c, tagmanager/css.c:
   Upate of the CSS parser to detect also ID and Type selectors
   (patch by Bronisław Białek, thanks).


2008-10-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/search.c:
   Change of a typo in singular form of some status messages. Thanks to
   Jeff Bailes for reporting.

