@@ -203,6 +203,7 @@ static UIUtilsFuncs uiutils_funcs = {
 	&ui_table_add_row,
 	&ui_path_box_new,
 	&ui_button_new_with_image,
+	&ui_add_document_sensitive
 };
 
 static DialogFuncs dialog_funcs = {
